--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "TODO",
-  "description": "TODO",
+  "name": "Debay",
+  "description": "debay-web client to serve ERC20 token page.",
   "version": "0.0.1",
   "scripts": {
     "dev": "sapper dev",
